--- a/src/index.scss
+++ b/src/index.scss
@@ -24,5 +24,15 @@ li {
 button,
 li {
   cursor: pointer;
-  transition: 250ms;
+}
+
+h1,
+h2,
+h3 {
+  padding: 0;
+  margin: 0;
+}
+
+h2 {
+  font-size: 2.2rem;
 }
