--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+@import "./utils/variables.scss";
 
 :root {
   font-family: "Roboto", sans-serif;
-  background-color: #242424;
-  color: white;
 }
 
 a {
   text-decoration: none;
-  color: white;
 }
 
 body {
@@ -35,4 +33,10 @@ h3 {
 
 h2 {
   font-size: 2.2rem;
+}
+
+button,
+label,
+a {
+  transition: 250ms;
 }
