--- a/src/pages/AboutPage/AboutPage.scss
+++ b/src/pages/AboutPage/AboutPage.scss
@@ -26,7 +26,7 @@
         border-radius: 0.1875rem;
         flex-direction: row;
         text-align: center;
-        border: 1px solid $secondary-color;
+        border: 0.125rem solid $secondary-color;
     }
 
     &__info {
