--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,27 +2,63 @@
 @import "../../utils/mixings.scss";
 
 .card {
-    height: 15em;
-    width: 22em;
-    border-radius: 0.25rem;
-    box-shadow: $box-shadow;
+    height: 31em;
+    width: 20em;
+    border-radius: 0.625rem;
+    padding: 2.8em 3em;
+    background-color: #202026;
     position: relative;
-    transition: transform 0.3s ease;
+    box-shadow: $box-shadow;
+    overflow: hidden;
+    transition: 250ms;
+
+    #light & {
+        @include theme($light-color, $dark-color);
+    }
 
     &:hover {
         @include slide-up-hover;
     }
 
-    &__content {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        padding: 1em;
-        gap: 1.5em;
+    &__gradient {
+        width: 100%;
+        height: 27%;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 
-    &__title {
-        font-size: 1.4rem;
-        font-size: bold;
+    &__institution {
+        display: flex;
+        flex-direction: column;
+        gap: 1.8em;
+        align-items: center;
+
+        &__name {
+            font-size: 1.5rem;
+            font-weight: bold;
+            z-index: 999;
+            color: $light-color;
+        }
+
+        &__logo {
+            width: 5em;
+            height: 5em;
+            border-radius: 50%;
+            border: 1px solid #bbb;
+            z-index: 999;
+        }
+
+        &__position {
+            font-size: 1.5rem;
+        }
+
+        &__description {
+            line-height: 1.8em;
+        }
+
+        &__timer {
+            font-size: 1.1rem;
+        }
     }
 }
